--- a/env/production.env
+++ b/env/production.env
@@ -14,7 +14,8 @@ DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=kingkonsole
-DATABASE_NAME=billable-local-test
+DATABASE_NAME=downloader
+# DATABASE_NAME=billable-local-test
 # synchronize will try to match out code(entity) into the DB table
 TYPEORM_SYNCHRONIZE=true
 TYPEORM_LOGGING=advanced-console
