--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
+    "prom-client": "^12.0.0",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.10",
     "socket.io": "^2.3.0",
